AC_PREREQ([2.65])
AC_INIT([Handmade Quake], [1.0], [])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_PROG_CC
AC_PROG_CC_STDC
AC_TYPE_INT32_T
AC_TYPE_UINT8_T
AC_CONFIG_FILES([Makefile src/Makefile src/module_2/Makefile])
AC_OUTPUT
